atualizações na interface

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <main>
+        <header>
             <h1><img src="assets/logo.svg" alt="" />Resultados do seu CV:</h1>
+        </header>
+        <main>
             <p class="info">
                 Aqui estão as informações obtidas da análise do seu currículo:
             </p>
             <section class="cv-results">
-                <section class="otimizacao">
+                <section id="otimizacao">
                     <h2>Otimização do Currículo:</h2>
                     <div class="area">
-                        <p class="area-header">Resumo Profissional:</p>
+                        <p class="area-header">Resumo Profissional</p>
                         <div class="field">
                             <p class="label">Atual:</p>
                             <p>
@@ -95,8 +97,96 @@
                         </p>
                     </div>
                 </section>
-                <section class="gaps">
-                    
+                <section id="gaps">
+                    <h2>Gaps:</h2>
+                    <div class="areas">
+                        <div class="area">
+                            <p class="area-header">Certificações</p>
+                            <p>
+                                Falta de certificações técnicas ou de gestão
+                                relevantes mencionadas no currículo.
+                            </p>
+                        </div>
+                        <div class="area">
+                            <p class="area-header">Cloud Computing</p>
+                            <p>
+                                Ausência de experiência explícita com
+                                plataformas de nuvem como AWS, Azure ou Google
+                                Cloud.
+                            </p>
+                        </div>
+                        <div class="area">
+                            <p class="area-header">DevOps e CI/CD</p>
+                            <p>
+                                Falta de menção clara de experiência com
+                                práticas e ferramentas de DevOps.
+                            </p>
+                        </div>
+                        <div class="area">
+                            <p class="area-header">Segurança da Informação</p>
+                            <p>
+                                Falta de destaque para experiências ou
+                                conhecimentos em segurança cibernética.
+                            </p>
+                        </div>
+                        <div class="area">
+                            <p class="area-header">Metodologias Ágeis</p>
+                            <p>
+                                Falta de detalhes sobre outras metodologias
+                                ágeis além do Scrum ou certificações
+                                relacionadas.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section id="recomendacoes">
+                    <h2>Recomendações:</h2>
+                    <p class="info">
+                        Veja as recomendações do nosso analista para ter um
+                        perfil mais adequado.
+                    </p>
+                    <ul>
+                        <li>
+                            Obter certificações relevantes em cloud computing,
+                            gerenciamento de projetos e metodologias ágeis.
+                        </li>
+                        <li>
+                            Aprofundar conhecimentos em pelo menos uma das
+                            principais plataformas de nuvem (AWS, Azure, GCP).
+                        </li>
+                        <li>
+                            Adquirir experiência com ferramentas de DevOps e
+                            CI/CD.
+                        </li>
+                        <li>
+                            Realizar cursos ou projetos em machine learning e
+                            IA.
+                        </li>
+                        <li>
+                            Buscar conhecimentos em práticas de segurança
+                            cibernética.
+                        </li>
+                        <li>
+                            Aprofundar e destacar experiências com metodologias
+                            ágeis além do Scrum.
+                        </li>
+                        <li>
+                            "Manter-se atualizado com as últimas versões das
+                            tecnologias já dominadas.
+                        </li>
+                        <li>
+                            Enfatizar habilidades de liderança e comunicação no
+                            currículo.
+                        </li>
+                        <li>
+                            Adicionar mais métricas e resultados quantificáveis
+                            aos projetos listados.
+                        </li>
+                        <li>
+                            Criar um portfólio online ou perfil GitHub para
+                            mostrar projetos pessoais.
+                        </li>
+                    </ul>
                 </section>
             </section>
         </main>
