melhorias na interface

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <header>
-            <h1><img src="assets/logo.svg" alt="" />Resultados do seu CV:</h1>
+            <h1>📋 Resultados do Seu Currículo:</h1>
+            <hr>
         </header>
         <main>
             <p class="info">
@@ -17,88 +18,92 @@
             </p>
             <section class="cv-results">
                 <section id="otimizacao">
-                    <h2>Otimização do Currículo:</h2>
-                    <div class="area">
-                        <p class="area-header">Resumo Profissional</p>
-                        <div class="field">
-                            <p class="label">Atual:</p>
+                    <h2>⚡ Otimização do Currículo:</h2>
+                    <div class="otimizacoes">
+                        <div class="area">
+                            <p class="area-header">Resumo Profissional</p>
+                            <div class="field">
+                                <p class="label">Atual:</p>
+                                <p>
+                                    Profissional Sênior com sólida experiência
+                                    nas áreas de Engenharia de Software, Dados,
+                                    Desenvolvimento de Sistemas Power BI e
+                                    Programação, com sólida carreira construída
+                                    em empresas nacionais e multinacionais.
+                                </p>
+                            </div>
+                            <div class="field">
+                                <p class="label">Sugestão:</p>
+                                <p>
+                                    Consultor Sênior em Desenvolvimento de
+                                    Sistemas e Análise de Dados com mais de 25
+                                    anos de experiência em Engenharia de
+                                    Software, Power BI e Programação.
+                                    Especializado em .NET, JavaScript, React JS
+                                    e bancos de dados como Oracle e SqlServer.
+                                    Histórico comprovado em empresas nacionais e
+                                    multinacionais, liderando projetos de grande
+                                    porte e otimizando processos de TI.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="area">
+                            <p class="area-header">Experiência Profissional</p>
+                            <div class="field">
+                                <p class="label">
+                                    Incluir mais realizações quantificáveis, por
+                                    exemplo:
+                                </p>
+                                <p>
+                                    Responsável pela sustentação e
+                                    desenvolvimento de sistemas utilizados por
+                                    mais de 500 colaboradores, aumentando a
+                                    eficiência operacional em 20%.", "Migração
+                                    de relatórios para Power BI, resultando em
+                                    uma redução de 30% no tempo de geração de
+                                    relatórios.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="area">
+                            <p class="area-header">Habilidades</p>
+                            <div class="field">
+                                <p class="label">Técnicas:</p>
+                                <p>
+                                    "Linguagens de Programação: C#, JavaScript,
+                                    Python, etc.", "Ferramentas de BI: Power BI,
+                                    Crystal Reports, Active Reports", "Bancos de
+                                    Dados: Oracle, SqlServer, MongoDB,
+                                    Cassandra", "Ferramentas de ETL: SSIS, IBM
+                                    DataStage, Databricks", "Metodologias:
+                                    Scrum, Gestão de Projetos
+                                </p>
+                            </div>
+                            <div class="field">
+                                <p class="label">Interpessoais:</p>
+                                <p>
+                                    "Liderança e Desenvolvimento de Equipes",
+                                    "Comunicação Efetiva", "Resolução de
+                                    Problemas", "Gestão de Projetos"
+                                </p>
+                            </div>
+                        </div>
+                        <div class="area">
+                            <p class="area-header">Projetos Relevantes</p>
                             <p>
-                                Profissional Sênior com sólida experiência nas
-                                áreas de Engenharia de Software, Dados,
-                                Desenvolvimento de Sistemas Power BI e
-                                Programação, com sólida carreira construída em
-                                empresas nacionais e multinacionais.
+                                "SISCOM – Sistema de Cobrança Modular:
+                                Implementação da localização de clientes,
+                                melhorando a precisão das cobranças em 15%.",
+                                "Projeto Forecast para TCS: Desenvolvimento de
+                                ferramentas para previsão de receitas e custos,
+                                aumentando a precisão das projeções financeiras
+                                em 25%."
                             </p>
                         </div>
-                        <div class="field">
-                            <p class="label">Sugestão:</p>
-                            <p>
-                                Consultor Sênior em Desenvolvimento de Sistemas
-                                e Análise de Dados com mais de 25 anos de
-                                experiência em Engenharia de Software, Power BI
-                                e Programação. Especializado em .NET,
-                                JavaScript, React JS e bancos de dados como
-                                Oracle e SqlServer. Histórico comprovado em
-                                empresas nacionais e multinacionais, liderando
-                                projetos de grande porte e otimizando processos
-                                de TI.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="area">
-                        <p class="area-header">Experiência Profissional</p>
-                        <div class="field">
-                            <p class="label">
-                                Incluir mais realizações quantificáveis, por
-                                exemplo:
-                            </p>
-                            <p>
-                                Responsável pela sustentação e desenvolvimento
-                                de sistemas utilizados por mais de 500
-                                colaboradores, aumentando a eficiência
-                                operacional em 20%.", "Migração de relatórios
-                                para Power BI, resultando em uma redução de 30%
-                                no tempo de geração de relatórios.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="area">
-                        <p class="area-header">Habilidades</p>
-                        <div class="field">
-                            <p class="label">Técnicas:</p>
-                            <p>
-                                "Linguagens de Programação: C#, JavaScript,
-                                Python, etc.", "Ferramentas de BI: Power BI,
-                                Crystal Reports, Active Reports", "Bancos de
-                                Dados: Oracle, SqlServer, MongoDB, Cassandra",
-                                "Ferramentas de ETL: SSIS, IBM DataStage,
-                                Databricks", "Metodologias: Scrum, Gestão de
-                                Projetos
-                            </p>
-                        </div>
-                        <div class="field">
-                            <p class="label">Interpessoais:</p>
-                            <p>
-                                "Liderança e Desenvolvimento de Equipes",
-                                "Comunicação Efetiva", "Resolução de Problemas",
-                                "Gestão de Projetos"
-                            </p>
-                        </div>
-                    </div>
-                    <div class="area">
-                        <p class="area-header">Projetos Relevantes</p>
-                        <p>
-                            "SISCOM – Sistema de Cobrança Modular: Implementação
-                            da localização de clientes, melhorando a precisão
-                            das cobranças em 15%.", "Projeto Forecast para TCS:
-                            Desenvolvimento de ferramentas para previsão de
-                            receitas e custos, aumentando a precisão das
-                            projeções financeiras em 25%."
-                        </p>
                     </div>
                 </section>
                 <section id="gaps">
-                    <h2>Gaps:</h2>
+                    <h2>❌ Gaps:</h2>
                     <div class="areas">
                         <div class="area">
                             <p class="area-header">Certificações</p>
@@ -140,10 +145,10 @@
                     </div>
                 </section>
                 <section id="recomendacoes">
-                    <h2>Recomendações:</h2>
+                    <h2>🔎 Recomendações:</h2>
                     <p class="info">
-                        Veja as recomendações do nosso analista para ter um
-                        perfil mais adequado.
+                        Veja as recomendações do nosso analista para melhorar
+                        seu perfil e conseguir melhores oportunidades.
                     </p>
                     <ul>
                         <li>
