melhorias na interface

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <header>
-            <h1>📋 Resultados do Seu Currículo:</h1>
-            <hr>
+            <h1>Joana Teixeira - Resultados do Currículo 📋</h1>
+            <hr />
         </header>
         <main>
             <p class="info">
@@ -104,6 +104,10 @@
                 </section>
                 <section id="gaps">
                     <h2>❌ Gaps:</h2>
+                    <p class="info">
+                        Veja os pontos importantes que o analista observou que
+                        podem ser melhorados.
+                    </p>
                     <div class="areas">
                         <div class="area">
                             <p class="area-header">Certificações</p>
