melhorias na interface

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
                     Joana Teixeira <span>- Resultados do Currículo 📋</span>
                 </h1>
                 <hr />
+                <nav>
+                    <ul>
+                        <li><a href="#otimizacao">Otimização</a></li>
+                        <li><a href="#gaps">Gaps</a></li>
+                        <li>
+                            <a href="#recomendacoes">Recomendações</a>
+                        </li>
+                    </ul>
+                </nav>
             </header>
             <main>
                 <p class="info">
