--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <body>
         <div class="container">
             <header>
-                <h1>
-                    Joana Teixeira <span>- Resultados do Currículo 📋</span>
-                </h1>
+                <h1>João Teixeira <span>- Resultados do Currículo 📋</span></h1>
                 <hr />
                 <nav>
                     <ul>
@@ -87,36 +85,35 @@
                                 <div class="field">
                                     <p class="label">Técnicas:</p>
                                     <p>
-                                        "Linguagens de Programação: C#,
-                                        JavaScript, Python, etc.", "Ferramentas
-                                        de BI: Power BI, Crystal Reports, Active
-                                        Reports", "Bancos de Dados: Oracle,
-                                        SqlServer, MongoDB, Cassandra",
-                                        "Ferramentas de ETL: SSIS, IBM
-                                        DataStage, Databricks", "Metodologias:
-                                        Scrum, Gestão de Projetos
+                                        Linguagens de Programação: C#,
+                                        JavaScript, Python, etc, Ferramentas de
+                                        BI: Power BI, Crystal Reports, Active
+                                        Reports, Bancos de Dados: Oracle,
+                                        SqlServer, MongoDB, Cassandra,
+                                        Ferramentas de ETL: SSIS, IBM DataStage,
+                                        Databricks, Metodologias: Scrum, Gestão
+                                        de Projetos
                                     </p>
                                 </div>
                                 <div class="field">
                                     <p class="label">Interpessoais:</p>
                                     <p>
-                                        "Liderança e Desenvolvimento de
-                                        Equipes", "Comunicação Efetiva",
-                                        "Resolução de Problemas", "Gestão de
-                                        Projetos"
+                                        Liderança e Desenvolvimento de Equipe,
+                                        Comunicação Efetiva, Resolução de
+                                        Problemas, Gestão de Projetos
                                     </p>
                                 </div>
                             </div>
                             <div class="area">
                                 <p class="area-header">Projetos Relevantes</p>
                                 <p>
-                                    "SISCOM – Sistema de Cobrança Modular:
+                                    SISCOM – Sistema de Cobrança Modular:
                                     Implementação da localização de clientes,
-                                    melhorando a precisão das cobranças em
-                                    15%.", "Projeto Forecast para TCS:
-                                    Desenvolvimento de ferramentas para previsão
-                                    de receitas e custos, aumentando a precisão
-                                    das projeções financeiras em 25%."
+                                    melhorando a precisão das cobranças em 15%,
+                                    Projeto Forecast para TCS: Desenvolvimento
+                                    de ferramentas para previsão de receitas e
+                                    custos, aumentando a precisão das projeções
+                                    financeiras em 25%.
                                 </p>
                             </div>
                         </div>
